--- a/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -4,33 +4,31 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa</title>
-        <title type="mainTitle" xml:lang="bo">རྒྱལ་པོ་ལ་གདམས་པ།</title>
-        <title type="mainTitle" xml:lang="en">Advice to a King (1)</title>
-        <title type="mainTitle" xml:lang="Sa-Ltn">Rājadeśa</title>
-        <title type="longTitle" xml:lang="bo">རྒྱལ་པོ་ལ་གདམ་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">rgyal po la gdam pa zhes bya ba theg pa chen po’i
+                <title type="mainTitle" xml:lang="en">Advice to a King (1)</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Rājadeśa</title>
+                <title type="mainTitle" xml:lang="bo">རྒྱལ་པོ་ལ་གདམས་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa</title>
+                <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra “Advice to a King” (1): Advice to King Bimbisāra</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Rājadeśa­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="bo">རྒྱལ་པོ་ལ་གདམ་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">rgyal po la gdam pa zhes bya ba theg pa chen po’i
           mdo</title>
-        <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra “Advice to a King” (1): Advice to King Bimbisāra</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Rājadeśa­nāma­mahāyāna­sūtra</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author xml:id="UT22084-062-014-1" role="translatorMain">Translated by the Sakya Pandita
+                <author role="translatorMain" xml:id="UT22084-062-014-1"><!--Translated by the Sakya Pandita
           Translation Group<lb/>under the patronage and supervision of 84000: Translating the Words
-          of the Buddha</author>
-        <consultant role="dharmaMaster" xml:id="UT22084-062-014-2">Khenpo Kalsang
-          Gyaltsen</consultant>
-        <author role="translatorEng" xml:id="UT22084-062-014-3">Khenpo Kalsang Gyaltsen</author>
-        <author role="translatorEng" xml:id="UT22084-062-014-4">Chodrungma Kunga Chodron</author>
-        <consultant role="projectManager" xml:id="UT22084-062-014-5">Chodrungma Kunga
-          Chodron</consultant>
-        <editor role="projectEditor" xml:id="UT22084-062-014-6">George FitzHerbert</editor>
-        <editor role="projectEditor" xml:id="UT22084-062-014-21">David Fiordalis</editor>
-        <editor role="copyEditor" xml:id="UT22084-062-014-34">Dawn Collins</editor>
-        <editor role="projectEditor" xml:id="UT22084-062-014-49">Rory Lindsay</editor>
-        <editor role="TEImarkupEditor" xml:id="UT22084-062-014-64">Martina Cotter</editor>
-      </titleStmt>
+          of the Buddha--></author>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-014-2">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-014-3">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-014-4">Chodrungma Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-062-014-5">Chodrungma Kunga Chodron</consultant>
+                <editor role="projectEditor" xml:id="UT22084-062-014-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-014-21">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-062-014-34">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-014-49">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-062-014-64">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-062-014-227">Andreas Doctor</editor>
+            </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -38,7 +36,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -50,7 +48,7 @@
         <idno xml:id="UT22084-062-014"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2023-12-26</date>
+        <date>2024-05-08</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh214" type="text">
@@ -148,13 +146,19 @@
                 <change who="#line-tofte" when="2024-01-16T15:11:31.176Z" type="text-version" status="0.0.2" xml:id="UT22084-062-014-216">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-05-02T09:00:43.613Z" type="text-version" status="0.0.3" xml:id="UT22084-062-014-228">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-08T14:07:42.831Z" type="translation-status" status="1.a" xml:id="UT22084-062-014-235">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-08T14:07:42.831Z" type="text-version" status="1.0.0" xml:id="UT22084-062-014-236">
+                    <desc>First published version.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
   <text>
-    <!--Note the "Contents" outline from the Word DOCX has not been included in the script. If the 
-                    Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
-                    markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
     <front>
       <div type="summary">
         <head type="summary" tid="1">Summary</head>
@@ -204,7 +208,9 @@
             identical title <title xml:lang="en">The Mahāyāna Sūtra “Advice to a King”</title>. The
             present sūtra (Toh 214) consists of
             advice given to Bimbisāra, the king of Magadha. The sūtra that immediately follows it in
-            the Degé Kangyur (Toh 215),<ref rend="pending" target="http://read.84000.co/translation/toh215.html"/> consists of advice to Udayana, the king of Vatsa.
+            the Degé Kangyur (Toh 215),<note place="end" xml:id="UT22084-062-014-229">Sakya Pandita Translation Group, trans. <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh215.html">Advice to a King (2)</ref>
+                            </title>, Toh 215 (84000: Translating the Words of the Buddha, 2024).</note> consists of advice to Udayana, the king of Vatsa.
             Finally, a longer sūtra in the next volume of the Degé Kangyur (Toh 221)<ref rend="pending" target="http://read.84000.co/translation/toh221.html"/> presents advice to
             King Prasenajit, the king of Kośala. </p>
           <milestone unit="chunk" xml:id="UT22084-062-014-73"/>
@@ -218,7 +224,7 @@
               is listed there as having 160 ślokas. Denkarma, fol. 229.a; Hermann-Pfandt 2008, pp.
               102–3.</note> nor are they mentioned in Chomden Raldri’s late-thirteenth-century
             survey of translated texts. Adding further to the uncertainty of their provenance,
-            neither text is found in any Kangyurs of the Thempangma recensional line.<note place="end" xml:id="UT22084-062-014-75"> As Peter Skilling notes, both texts appear
+            neither text is found in any Kangyurs of the Thempangma recensional line.<note place="end" xml:id="UT22084-062-014-75"> As Peter Skilling notes, both texts appear seemingly
               “out of nowhere” in the Kangyurs of the Tshalpa line. Skilling 2021, pp. 410 and
               430.</note>
                     </p>
@@ -265,7 +271,7 @@
                         <ref cRef="F.207.a" type="folio" xml:id="UT22084-062-014-201"/> Homage to all buddhas and bodhisattvas.</p>
           <lb/>
           <p tid="23">Thus did I hear at one time. The Blessed One was staying at Prince Jeta’s
-            Grove, Anāthapiṇḍada’s Park, with a large community of monks and a numerous following of
+            Grove, Anāthapiṇḍada’s Park, with a large community of monks and a community of many
             bodhisattvas. At that time, the Blessed One declared to his audience, “Since the time
             has now come for King Bimbisāra to be trained, we must go to Magadha.” He then departed,
             gliding through the sky like a king of swans along with his entourage. </p>
@@ -312,7 +318,7 @@
             <l>Where there is accumulation, there is depletion.<note place="end" xml:id="UT22084-062-014-92"> These first five lines reprise a common theme on
                 impermanence found across many texts. For a similar set of oppositions, see, for
                 example, <title xml:lang="en">The Account of the Noble Deeds of Śrīsena</title> Toh
-              349, <ptr target="#UT22084-076-003-163">1.107</ptr>. Similar verses are also found in the <title xml:lang="Sa-Ltn">Vinayavastu</title> and <title xml:lang="Sa-Ltn">Udānavarga</title>, and in the
+              349, <ptr target="#UT22084-076-003-163"/><!--1.107-->. Similar verses are also found in the <title xml:lang="Sa-Ltn">Vinayavastu</title> and <title xml:lang="Sa-Ltn">Udānavarga</title>, and in the
                 Pali Dīgha Nikāya. For references see Skilling 2021, p. 571, n. 922.</note>
                         </l>
             <l>The glow of youth is robbed by illness</l>
@@ -348,6 +354,7 @@
               “world of animate beings.”</note> replied the Blessed One.</p>
           <milestone unit="chunk" xml:id="UT22084-062-014-102"/>
           <p tid="36"> “How is this container, the world, impermanent?” asked the king.</p>
+          <milestone unit="chunk" xml:id="UT22084-062-014-230"/>
           <p tid="37">The Blessed One replied:<note place="end" xml:id="UT22084-062-014-104"> In
               Tibetan, the Buddha’s replies are henceforth in nine-syllable meter with a light
               caesura or hiatus usually after the fourth syllable of each line, and no obvious
@@ -378,6 +385,7 @@
           <p tid="41">
             “How are the contents, sentient beings, impermanent?” asked the king.
           </p>
+          <milestone unit="chunk" xml:id="UT22084-062-014-231"/>
           <p tid="42">
             The Blessed One replied:
           </p>
@@ -541,6 +549,7 @@
           <milestone unit="chunk" xml:id="UT22084-062-014-133"/>
           <p tid="59">King Bimisāra asked, “Blessed One, what are the sufferings of beings in
             saṃsāra?”</p>
+          <milestone unit="chunk" xml:id="UT22084-062-014-232"/>
           <p tid="60">The Blessed One replied, </p>
           <milestone unit="chunk" xml:id="UT22084-062-014-135"/>
           <lg tid="61">
@@ -660,7 +669,7 @@
                         </l>
             <l>So that even objects of enjoyment hold no allure.</l>
             <l>Physical strength is sapped and you cannot even stand up.</l>
-            <l>Your luster and radiance are gone; you look like a hungry ghost.</l>
+            <l>Your luster and radiance are gone; you look like a preta.</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-062-014-150"/>
           <lg tid="75">
@@ -695,6 +704,7 @@
           <milestone unit="chunk" xml:id="UT22084-062-014-154"/>
           <p tid="78">Then the king asked, “Blessed One, if saṃsāra is so much suffering, then where
             is well-being to be found?”</p>
+          <milestone unit="chunk" xml:id="UT22084-062-014-233"/>
           <p tid="79">The Blessed One replied, “Nirvāṇa is perfect well-being.”<note place="end" xml:id="UT22084-062-014-156">
               <foreign xml:lang="Bo-Ltn" type="term">bde legs phun sum tshogs pa</foreign>. Both
               Thubten Kalzang and Peter Skilling give “the perfection of well-being.”</note>
@@ -727,6 +737,7 @@
           <p tid="83">When the Blessed One had spoken, King Bimbisāra became disillusioned with
             saṃsāra, discarded his royal power like spittle in the dust, and set his mind on
             accomplishing nirvāṇa. </p>
+          <milestone unit="chunk" xml:id="UT22084-062-014-234"/>
           <p tid="84">Then the Blessed One said, </p>
           <milestone unit="chunk" xml:id="UT22084-062-014-164"/>
           <lg tid="85">
@@ -747,7 +758,8 @@
           <p tid="87">After the Blessed One had spoken, everyone, King Bimbisāra and the rest,
             rejoiced and praised what the Blessed One had said.</p>
           <milestone unit="chunk" xml:id="UT22084-062-014-167"/>
-          <trailer tid="88">This concludes <title xml:lang="en">The Mahāyāna Sūtra “Advice to King Bimbisāra.”</title>.</trailer>
+          <trailer tid="88">This concludes <title xml:lang="en">The Mahāyāna Sūtra “Advice to King Bimbisāra.”</title>
+                    </trailer>
         </div>
         <div type="colophon" xml:id="UT22084-062-014-colophon">
           <head type="colophon" tid="89">Colophon</head>
@@ -868,12 +880,9 @@
           <item>
                         <gloss xml:id="UT22084-062-014-183" type="term" mode="match">
                             <term type="translationMain">preta</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">preta</term>
+                            <term xml:lang="Sa-Ltn">preta</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yi dags</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཡི་དགས།</term>
-                            <note type="definition" rend="prepend">
-                                <p>Also translated as “hungry ghost.”</p>
-                            </note>
                         </gloss>
                     </item>
           <item>
@@ -904,17 +913,6 @@
                   air.</p>
                             </note>
             </gloss>
-                    </item>
-          <item>
-                        <gloss xml:id="UT22084-062-014-186" type="term" mode="match">
-                            <term type="translationMain">hungry ghost</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">preta</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yi dags</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཡི་དགས།</term>
-                            <note type="definition" rend="prepend">
-                                <p>Also translated as “preta.”</p>
-                            </note>
-                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-062-014-187">
@@ -952,7 +950,7 @@
           <item>
                         <gloss xml:id="UT22084-062-014-191" type="person" mode="match">
                             <term type="translationMain">Bimbisāra</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">bimbisāra</term>
+                            <term xml:lang="Sa-Ltn">bimbisāra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gzugs can snying po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">གཟུགས་ཅན་སྙིང་པོ།</term>
                             <note type="definition">
@@ -1045,7 +1043,7 @@ King Bimbisāra of Magadha was a contemporary of the Buddha Śākyamuni (accordi
             <term type="translationMain">Dānaśīla</term>
             <term xml:lang="Bo-Ltn" n="1">dA na shI la</term>
                             <term xml:lang="bo" n="1">དཱ་ན་ཤཱི་ལ།</term>
-            <term xml:lang="Sa-Ltn"/>
+            
             <note type="definition">
               <p>An Indian paṇḍita who was resident in Tibet during the late eighth and early ninth centuries.</p>
             </note>
@@ -1056,13 +1054,13 @@ King Bimbisāra of Magadha was a contemporary of the Buddha Śākyamuni (accordi
             <term type="translationMain">Bandé Yeshé Dé</term>
             <term xml:lang="Bo-Ltn" n="1">ye shes sde</term>
                             <term xml:lang="bo" n="1">ཡེ་ཤེས་སྡེ།</term>
-            <term xml:lang="Sa-Ltn"/>
+            
           </gloss>
                     </item>
           <item>
             <gloss type="person" mode="match" xml:id="UT22084-062-014-213">
               <term type="translationMain">Blessed One</term>
-              <term xml:lang="Sa-Ltn" type="attestedSource">bhagavan</term>
+              <term xml:lang="Sa-Ltn">bhagavan</term>
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bcom ldan ’das</term>
               <term xml:lang="bo" type="attestedSource" n="1">བཅོམ་ལྡན་འདས།</term>
             </gloss>
