--- a/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-062-015-219">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -173,6 +173,9 @@
                 </change>
                 <change who="#konchog" when="2024-05-08T17:38:42.087Z" type="text-version" status="1.0.1" xml:id="UT22084-062-015-229">
                     <desc>More than 20 fixes throughout intro, translation, notes, and glossary.</desc>
+                </change>
+                <change who="#john" when="2024-05-08T19:07:37.299Z" type="text-version" status="1.0.2" xml:id="UT22084-062-015-230">
+                    <desc>Attempted fix of glossary definition for "self" at Konchog's request.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -909,7 +912,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bdag</term>
               <term xml:lang="bo" type="attestedSource" n="1">བདག</term>
               <note type="definition">
-                <p>It is crucial to understand what is meant by “self,” before one is able to
+                <p><!--It is crucial to understand what is meant by “self,” before one is able to
                   realize the all-important “absence of self.” Before we can discover an absence, we
                   have to know what we are looking for. In Mahāyāna, there is a self of persons and
                   a self of things, both presumed habitually by living beings and hence informative
@@ -918,7 +921,13 @@
                   things, or as the intrinsic realities of things, or as the intrinsic identities of
                   things, all permanent, unrelated, and unrelative, etc. The nondiscovery of such
                   “selves” within changing, relative, interdependent persons and things is the
-                  realization of ultimate reality, or absence of self.</p>
+                  realization of ultimate reality, or absence of self.-->
+                  A substantial, self-subsistent entity within beings or 
+                  things, or the intrinsic reality of things, or the intrinsic identity of
+                  things, that is permanent and nonrelative. The Buddha’s teaching, in contrast to
+                  that of other spiritual traditions, holds as a key tenet that the presumed existence of such a 
+                  ‘self’ (in Mahāyāna thought, in things as well as in beings) is habitual but mistaken,
+                  and is the basis of suffering and delusion. Its absence (nonself) can be realized by investigation.</p>
               </note>
             </gloss>
           </item>
