--- a/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-062-015-219">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -177,6 +177,9 @@
                 <change who="#john" when="2024-05-08T19:07:37.299Z" type="text-version" status="1.0.2" xml:id="UT22084-062-015-230">
                     <desc>Attempted fix of glossary definition for "self" at Konchog's request.</desc>
                 </change>
+                <change who="#konchog" when="2024-05-08T19:54:28.66Z" type="text-version" status="1.0.3" xml:id="UT22084-062-015-231">
+                    <desc>One final fix in the intro.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -247,7 +250,7 @@
               this refers to the advice to King Prasenajit (Toh 221). This can be ascertained
               because it is listed there as having 160 ślokas. Denkarma, fol. 229.a; Hermann-Pfandt
               2008, pp. 102–3.</note> nor are they mentioned in Chomden Raldri’s
-            late-thirteenth-century survey of translated texts. Adding further to the uncertainty of
+            late thirteenth-century survey of translated texts. Adding further to the uncertainty of
             their provenance, neither text is found in any Kangyurs of the Thempangma recensional
               line.<note place="end" xml:id="UT22084-062-015-79"> As Peter Skilling notes, both
               texts appear “out of nowhere” in the Kangyurs of the Tshalpa line. Skilling 2021, pp.
