--- a/translations/kangyur/translations/047-001_toh99_infinite_certainty.xml
+++ b/translations/kangyur/translations/047-001_toh99_infinite_certainty.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-047-001-3113">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.27.1 <date>2024</date>
+                <edition>v 1.27.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -194,6 +194,9 @@
                 </change>
                 <change who="#john" when="2024-05-09T09:48:32.264Z" type="text-version" status="1.27.1" xml:id="UT22084-047-001-10507">
                     <desc>Added paragraph in intro, notes, bibliography entry, and cross references concerning parallels with Anataptagāthā and Bhaiṣajyavastu.</desc>
+                </change>
+                <change who="#john" when="2024-05-10T16:08:48.331Z" type="text-version" status="1.27.2" xml:id="UT22084-047-001-10508">
+                    <desc>Some minor edits to the preceding changes.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -449,9 +452,10 @@
                         literature,<note place="end" xml:id="UT22084-047-001-4027">See <title xml:lang="en">The Chapter on Medicines</title> 
                             (<title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title>, ch. 6 of the <title xml:lang="Sa-Ltn">Vinayavastu</title>, Toh 1), 
                             <ptr target="#UT22084-001-006-5450"/> ff. and <ptr target="#UT22084-001-006-5447"/>.</note> in which (as one of his ten most important
-                        acts according to some versions) the Buddha flies to Lake Anavatapta with his monks. In that narrative, as well as in the present text 
+                        acts according to some versions) the Buddha flies to Lake Anavatapta with his monks. In the Mūlasarvāstivādin version (but not 
+                        the Gandhārī text) of that narrative, as well as in the present sūtra 
                         (<ptr target="#UT22084-047-001-2383"/>–<ptr target="#UT22084-047-001-2387"/>), as a prelude Śāriputra and Maudgalyāyana engage in a 
-                        humorous contest of supernatural powers. At the lake, in the <title xml:lang="Sa-Ltn">Anavataptagāthā</title> many of the 
+                        humorous contest of supernatural powers. In all versions, at the lake, in the <title xml:lang="Sa-Ltn">Anavataptagāthā</title> many of the 
                         elders recite verses telling of the previous lives in which they aspired to become disciples, but here it is the nāga kings who recite verses of praise,
                         and then the Buddha himself who relates—for most of the rest of the sūtra—the causes in his own previous lives that have led to his present
                         qualities. </p>
@@ -5149,7 +5153,8 @@
                             (<title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title>, ch. 6 of the <title xml:lang="Sa-Ltn">Vinayavastu</title>, Toh 1), 
                             <ptr target="#UT22084-001-006-5464"/>–<ptr target="#UT22084-001-006-6714"/> and <ptr target="#UT22084-001-006-5447"/>; see also 
                             Salomon 2008, and Salomon 2018, pp. 199–228. In the present text, the narrative starts off with an account of the contest 
-                            of supernatural powers between Mahā­maudgalyāyana and Śāriputra very similar to that in <title xml:lang="en">The Chapter on Medicines</title>.
+                            of supernatural powers between Mahā­maudgalyāyana and Śāriputra very similar to that in <title xml:lang="en">The Chapter on Medicines</title>
+                            (although that passage is not found in the Gandhārī version).
                             The rest of the content, which continues into the following section, is very different, but reflects the <title xml:lang="Sa-Ltn">Anavataptagāthā</title>
                         at least in the telling of events in the Buddha’s past lives that explain features of his present one. Another Mahāyāna sūtra,
                             <title xml:lang="en">
