--- a/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-062-014-227">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -157,6 +157,9 @@
                 </change>
                 <change who="#konchog" when="2024-05-08T19:52:27.938Z" type="text-version" status="1.0.1" xml:id="UT22084-062-014-237">
                     <desc>Numerous fixes throughout all sections.</desc>
+                </change>
+                <change who="#andre" when="2024-05-10T16:28:02.337Z" type="text-version" status="1.0.2" xml:id="UT22084-062-014-238">
+                    <desc>Glossart matching revised, activated in CG</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -809,7 +812,7 @@
             Buddha</title>, 1–11. Dharamsala: Library of Tibetan Works and Archives, 1973.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-062-014-176">
