--- a/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/translations/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-062-014-227">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -161,6 +161,9 @@
                 <change who="#andre" when="2024-05-10T16:28:02.337Z" type="text-version" status="1.0.2" xml:id="UT22084-062-014-238">
                     <desc>Glossart matching revised, activated in CG</desc>
                 </change>
+                <change who="#john" when="2024-05-13T10:11:24.832Z" type="text-version" status="1.0.3" xml:id="UT22084-062-014-239">
+                    <desc>Placed 2nd title as subtitle, other small edits.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -268,7 +271,8 @@
       <div type="translation">
         <head type="translation"> The Translation </head>
         <head type="titleHon" tid="15">The Mahāyāna Sūtra</head>
-        <head type="titleMain" tid="16">Advice to a King (1): Advice to King Bimbisāra</head>
+        <head type="titleMain" tid="16">Advice to a King (1) </head>
+        <head type="sub" tid="17">Advice to King Bimbisāra</head>
         <!--In the rare case that there is initial text before the first chapter begins, the script will place the
                         text here. However, this will cause the two headings for the "Honorific Title" and "Main Title" to be duplicated below
                         as <p> elements. Markup Editors, please delete these initial duplicated <p> elements along with their milestones and delete this comment.-->
