--- a/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-062-015-219">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -182,6 +182,9 @@
                 </change>
                 <change who="#andre" when="2024-05-10T17:33:17.325Z" type="text-version" status="1.0.4" xml:id="UT22084-062-015-232">
                     <desc>Glossary matching revised - activated in CG</desc>
+                </change>
+                <change who="#john" when="2024-05-13T10:14:22.467Z" type="text-version" status="1.0.5" xml:id="UT22084-062-015-1142">
+                    <desc>Placed 2nd title as subtitle, other small edits, started adding biblio entries for 84000 texts mentioned in notes but others still needed.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -340,7 +343,8 @@
       <div type="translation">
         <head type="translation"> The Translation </head>
         <head type="titleHon" tid="18">The Mahāyāna Sūtra</head>
-        <head type="titleMain" tid="19">Advice to a King (2): Advice to Udayana, King of
+        <head type="titleMain" tid="67">Advice to a King (2) </head>
+        <head type="sub" tid="68">Advice to Udayana, King of
           Vatsa</head>
         <div type="section" xml:id="UT22084-062-015-section-1">
           <milestone unit="chunk" xml:id="UT22084-062-015-94"/>
@@ -581,6 +585,14 @@
         </div>
         <div type="section" xml:id="UT22084-062-015-listBibl-2">
           <head type="section" tid="65">Modern Sources and Translations</head>
+          
+          <bibl xml:id="UT22084-062-015-1141">
+                        <title xml:lang="en">
+                            <ref target="http://read.84000.co/translation/toh214.html">Advice to a King
+            (1)</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Rājadeśa</title>, Toh 214). Translated by Sakya Pandita Translation
+            Group. 84000: Translating the Words of the Buddha, 2024.</bibl>
+        
           <bibl xml:id="UT22084-062-015-141">Adval, Niti. <title xml:lang="en">The Story of King
               Udayana</title>. Chowkhamba Sanskrit Studies, LXXIV. Varanasi: Chowkhamba
             Publications, 1970. </bibl>
