--- a/translations/kangyur/placeholders/093-018_toh703-the_incantation_the_lions_roar_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-018_toh703-the_incantation_the_lions_roar_of_avalokitesvara.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-093-018-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-093-018-13">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-093-018-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-093-018-32">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-093-018"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-15T11:55:46.401Z" type="text-version" status="0.0.11" xml:id="UT22084-093-018-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T14:11:32.442Z" type="text-version" status="0.0.12" xml:id="UT22084-093-018-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:20:06.478Z" type="translation-status" status="2.b" xml:id="UT22084-093-018-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:20:06.478Z" type="text-version" status="0.0.13" xml:id="UT22084-093-018-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
