--- a/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
@@ -11,13 +11,14 @@
                 <author role="translatorEng" xml:id="UT22084-093-019-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-093-019-11">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-093-019-20">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-093-019-30">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-093-019"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-15T11:58:46.916Z" type="text-version" status="0.0.11" xml:id="UT22084-093-019-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T14:12:15.31Z" type="text-version" status="0.0.12" xml:id="UT22084-093-019-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:22:08.332Z" type="translation-status" status="2.b" xml:id="UT22084-093-019-32">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:22:08.332Z" type="text-version" status="0.0.13" xml:id="UT22084-093-019-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
