--- a/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
+++ b/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT23703-075-017-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT23703-075-017-16">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT23703-075-017-25">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT23703-075-017-35">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT23703-075-017"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +93,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-15T12:02:51.302Z" type="text-version" status="0.0.12" xml:id="UT23703-075-017-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T14:13:06.181Z" type="text-version" status="0.0.13" xml:id="UT23703-075-017-36">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:25:52.085Z" type="translation-status" status="2.b" xml:id="UT23703-075-017-37">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:25:52.085Z" type="text-version" status="0.0.14" xml:id="UT23703-075-017-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
