--- a/translations/kangyur/placeholders/100-068_toh912-the_incantation_of_the_promise_made_by_lokesvara_simhanada.xml
+++ b/translations/kangyur/placeholders/100-068_toh912-the_incantation_of_the_promise_made_by_lokesvara_simhanada.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-100-068-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-100-068"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +65,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:23:32.254Z" type="text-version" status="0.0.8" xml:id="UT22084-100-068-16">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:28:29.135Z" type="translation-status" status="2.b" xml:id="UT22084-100-068-17">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T13:28:29.135Z" type="text-version" status="0.0.9" xml:id="UT22084-100-068-18">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
