--- a/translations/tengyur/placeholders/047-055_toh1977-vajrabhairavasadhanasanksipta.xml
+++ b/translations/tengyur/placeholders/047-055_toh1977-vajrabhairavasadhanasanksipta.xml
@@ -10,11 +10,11 @@
                 <title xml:lang="en" type="mainTitle">Condensed Sādhana of Glorious Vajrabhairava</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-047-055"/>
             </publicationStmt>
             <sourceDesc>
@@ -37,6 +37,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-047-055-3">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T14:00:38.737Z" type="translation-status" status="2.h" xml:id="UT23703-047-055-4">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T14:00:38.737Z" type="text-version" status="0.0.3" xml:id="UT23703-047-055-5">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
