--- a/translations/tengyur/placeholders/079-002_toh3721-gurupancasika.xml
+++ b/translations/tengyur/placeholders/079-002_toh3721-gurupancasika.xml
@@ -9,8 +9,12 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Guru­pañcāśikā</title>
                 <title xml:lang="en" type="mainTitle">Fifty Verses on Guru Devotion</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-079-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -34,6 +38,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-079-002-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T14:07:48.517Z" type="translation-status" status="2.h" xml:id="UT23703-079-002-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-13T14:07:48.517Z" type="text-version" status="0.0.1" xml:id="UT23703-079-002-7">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
