--- a/translations/kangyur/placeholders/091-029_toh632-the_shorter_tantra_for_the_practice_of_the_king_of_vajra_wrath.xml
+++ b/translations/kangyur/placeholders/091-029_toh632-the_shorter_tantra_for_the_practice_of_the_king_of_vajra_wrath.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje khro bo'i rgyal po'i rtog pa bsdus pa'i rgyud ces bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrakrodharāja­kalpalaghutantranāma</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-029"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-029-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-14T06:59:20.628Z" type="translation-status" status="3" xml:id="UT22084-091-029-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-14T06:59:20.628Z" type="text-version" status="0.0.1" xml:id="UT22084-091-029-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
