--- a/translations/kangyur/translations/043-002_toh65-the_prophecy_for_bhadra_the_illusionist.xml
+++ b/translations/kangyur/translations/043-002_toh65-the_prophecy_for_bhadra_the_illusionist.xml
@@ -30,14 +30,14 @@
         <editor role="finalReviewer" xml:id="UT22084-043-002-601">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
         <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into
           modern languages, and to make them available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial - No-derivatives) 3.0
@@ -159,6 +159,12 @@
                 </change>
                 <change who="#andre" when="2024-05-11T16:17:59.579Z" type="text-version" status="1.0.2" xml:id="UT22084-043-002-694">
                     <desc>Glossary matching revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T12:08:16.071Z" type="translation-status" status="1" xml:id="UT22084-043-002-695">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T12:08:16.071Z" type="text-version" status="1.0.3" xml:id="UT22084-043-002-696">
+                    <desc>Included in App v 3.14</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
