--- a/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -172,6 +172,12 @@
                 </change>
                 <change who="#andre" when="2024-05-12T13:21:08.336Z" type="text-version" status="1.0.2" xml:id="UT22084-058-005-1638">
                     <desc>Glossary matching revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T15:39:24.524Z" type="translation-status" status="1" xml:id="UT22084-058-005-1639">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T15:39:24.524Z" type="text-version" status="1.0.3" xml:id="UT22084-058-005-1640">
+                    <desc>Included in App v 3.14</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
