--- a/translations/kangyur/translations/067-002_toh263-acceptance_that_tames_beings_with_the_sky_colored_method_of_perfect_conduct.xml
+++ b/translations/kangyur/translations/067-002_toh263-acceptance_that_tames_beings_with_the_sky_colored_method_of_perfect_conduct.xml
@@ -32,7 +32,7 @@
                 <sponsor xml:id="UT22084-067-002-10">Gu Yun and Family</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -40,7 +40,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -156,6 +156,12 @@
                 </change>
                 <change who="#andre" when="2024-05-12T16:19:45.601Z" type="text-version" status="1.0.1" xml:id="UT22084-067-002-1457">
                     <desc>Glossary matching revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T16:52:31.059Z" type="translation-status" status="1" xml:id="UT22084-067-002-1458">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-05-14T16:52:31.059Z" type="text-version" status="1.0.2" xml:id="UT22084-067-002-1459">
+                    <desc>Included in App v 3.14</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
